[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Walls.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Ramp.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Kicker.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/GoalPost.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Kicker.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Box.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Box.gd" type="Script" id=9]
[ext_resource path="res://Scripts/World.gd" type="Script" id=10]

[sub_resource type="BoxShape" id=1]

[sub_resource type="ShaderMaterial" id=2]

[node name="World" type="Spatial"]
script = ExtResource( 10 )

[node name="Floor" parent="." instance=ExtResource( 2 )]

[node name="EndFloor" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -45.8154, 16.3781, 0 )

[node name="Walls" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, 0 )

[node name="Walls2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, 0 )

[node name="Walls3" parent="." instance=ExtResource( 1 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 1, 9.5 )

[node name="Walls4" parent="." instance=ExtResource( 1 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 1, -9.5 )

[node name="Ramp" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.26375, 0.494869, -0.00186252, -0.719696, 0.868967, 0.000207189, 0.00250289, 0.000741642, 0.999998, -21.3947, 8.28711, 0 )

[node name="Kicker" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
script = ExtResource( 7 )

[node name="Camera" type="Camera" parent="Kicker"]
transform = Transform( -1.62921e-07, -0.939693, 0.34202, 0, 0.34202, 0.939693, -1, 1.53095e-07, -5.57221e-08, 10, 22.8788, 0 )

[node name="Ball" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 1.57592, 0 )
linear_damp = 0.4

[node name="GoalPost" parent="." instance=ExtResource( 6 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -40.9244, 22.9383, -8.80938 )

[node name="Box" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.87904, 1.86966, -5.25912 )
script = ExtResource( 9 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 6.11684, 0, 0, 0, 7.26024, 0, 0, 0, 1, -45.9262, 22.9661, -8.78497 )
shape = SubResource( 1 )

[node name="Panel1" type="Panel" parent="."]
margin_left = 433.948
margin_top = 239.218
margin_right = 621.948
margin_bottom = 318.218
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel1"]
material = SubResource( 2 )
margin_left = 59.0
margin_top = 31.0
margin_right = 125.0
margin_bottom = 45.0
text = "YOU WON"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -1.02677e-07, -0.77641, 0.630229, -1.26493e-07, 0.630229, 0.77641, -1, -7.10543e-15, -1.62921e-07, 0, 25.663, 0 )
shadow_enabled = true

[node name="Panel2" type="Panel" parent="."]
margin_left = 436.937
margin_top = 238.0
margin_right = 619.937
margin_bottom = 316.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel2"]
margin_left = 32.7551
margin_top = 30.8978
margin_right = 160.755
margin_bottom = 49.8978
text = "YOU LOST THE BALL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="."]
margin_left = 437.51
margin_top = 240.532
margin_right = 618.51
margin_bottom = 319.532
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel3"]
margin_left = 31.8775
margin_top = 32.3674
margin_right = 156.878
margin_bottom = 48.3674
text = "DAMN! YOU FELL. :("
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Box" to="Box" method="_on_Box_body_entered"]
[connection signal="body_shape_entered" from="Box" to="Box" method="_on_Box_body_shape_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
